Added JUnit tests, reflection, screenshots, moved LegacyThermalPrinter